--- a/Dockerfile.dlib.cv
+++ b/Dockerfile.dlib.cv
@@ -1,6 +1,5 @@
 # Note from Brandon on 2015-01-13:
 #
-#   Always push this from an OSX Docker machine.
 #
 #   If I build this on my Arch Linux desktop it works fine locally,
 #   but dlib gives an `Illegal Instruction (core dumped)` error in
@@ -9,12 +8,10 @@
 #   container successfully deploys on my Arch Linux desktop.
 #
 # Building and pushing:
-#   docker build -f opencv-dlib-torch.Dockerfile -t opencv-dlib-torch .
-#   docker tag <tag of last container> bamos/ubuntu-opencv-dlib-torch:ubuntu_14.04-opencv_2.4.11-dlib_18.16-torch_2016.03.19
-#   docker push bamos/ubuntu-opencv-dlib-torch:ubuntu_14.04-opencv_2.4.11-dlib_18.16-torch_2016.03.19
+#   docker build -f Dockerfile.dlib.cv -t opencv-dlib .
 
 FROM ubuntu:14.04
-MAINTAINER Brandon Amos <brandon.amos.cs@gmail.com>
+MAINTAINER Ian Philips <iansphilips@gmail.com>
 
 RUN apt-get update && apt-get install -y \
     build-essential \
